infra/k8s/09.01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisp-ingress
  namespace: ${GKE_NAMESPACE}
  labels:
    app: whisp-ingress
    env: ${ENVIRONMENT}
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ${GKE_LB_STATIC_IP_NAME}
    networking.gke.io/managed-certificates: whisp-managed-cert
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: whisp-api
            port:
              number: 8000
      - path: /monitoring
        pathType: Prefix
        backend:
          service:
            name: grafana-proxy
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisp-app
            port:
              number: 80
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: whisp-api
            port:
              number: 8000
      - path: /monitoring
        pathType: Prefix
        backend:
          service:
            name: grafana-proxy
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisp-app
            port:
              number: 80
